welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:7: error: not found: value col
	col();
        ^